mini-app/mini-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mini-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mini-app
  template:
    metadata:
      labels:
        app: mini-app
    spec:
      containers:
        - name: mini-app
          image: lizabatache/mini-app:v501
          ports:
            - containerPort: 3000
