mini-app/mini-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-app-service
spec:
  selector:
    app: mini-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080  # Choisi un port libre (entre 30000–32767)
