mini-app/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mini-app-virtualservice
spec:
  hosts:
    - mini-app.local
  gateways:
    - mini-app-gateway
  http:
    - match:
        - uri:
            prefix: /call-analysis
      route:
        - destination:
            host: mini-app-service
            port:
              number: 3000
